--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/vickenstein/mongoose-association#readme",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
   },
   "dependencies": {
     "inflection": "^1.12.0",
     "lodash": "^4.17.10",
-    "mongoose": "^5.1.7"
+    "mongoose": "^5.2.1"
   }
 }
