--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   "dependencies": {
     "inflection": "^1.12.0",
     "lodash": "^4.17.10",
-    "mongoose": "^5.2.1"
+    "mongoose": ">=4.11.0"
   }
 }
