--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A cleaner and faster way to setup mongoose populate with virtual field",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. mocha --recursive --exit"
+    "test": "NODE_PATH=. mocha --recursive --exit",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,9 @@
   "devDependencies": {
     "benchmark": "^2.1.4",
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0"
   },
   "dependencies": {
