--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mongoose-association",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A cleaner and faster way to setup mongoose populate with virtual field",
   "main": "index.js",
   "scripts": {
     "test": "NODE_PATH=. mocha --recursive --exit",
-    "lint": "eslint src"
+    "lint": "node_modules/.bin/eslint src index.js"
   },
   "repository": {
     "type": "git",
