--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "noImplicitAny": true,
     "declaration": true,
     "declarationDir": "dist",
