--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongoose-association",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "A cleaner and faster way to setup mongoose populate with virtual field",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -44,7 +44,7 @@
   "dependencies": {
     "inflection": "^1.12.0",
     "lodash": "^4.17.10",
-    "mongoose": ">=4.11.0",
+    "mongoose": "^5.4.0",
     "node-association": "0.0.9"
   }
 }
